--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body {
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
-  background-color: #f8dd74;
+  background-color: #8DB3D9;
 }
 
 #navbar-font a {
